<resources>
    <string name="app_name">ToDoList</string>
    <string name="TDl">Things ToDo </string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
<<<<<<< HEAD
    <string name="CPTS">Create profile to start your first ToDo List</string>
    <string name="Yname">Your name</string>
    <string name="Pass">Password</string>
    <string name="email">Your email address</string>
    <string name="CP">Create your profile</string>
    <string name="AHA">Already have an account?</string>
    <string name="Login">Log In</string>
    <string name="WB">Welcome back!</string>
    <string name="FP">Forgot your password?</string>
    <string name="DHA">Don’t have an account?</string>
    <string name="todo">TODO</string>
    <string name="List">Lists :</string>
    <string name="Back">Back</string>
    <string name="LTD">List To Do</string>
    <string name="Tasks">Tasks</string>
    <string name="CNLH">Create new list here</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="CNTH">Create new task here</string>
    <string name="TaskParent">Task Parent </string>
    <string name="result">Result</string>
    <string name="logout">Logout</string>

    TaskParent
=======
    <string name="Create_Profile_intro"> Create profile to start your first ToDo List </string>
    <string name="Name">Your Name </string>
    <string name="Pass">Password</string>
    <string name="Email">Your Email address  </string>
    <string name="Create_Profile">Create your Profile</string>
    <string name="having_acc">Already have an account</string>
    <string name="login">Log in</string>

>>>>>>> 4bd5f57d47cedef50b7afd0efed8544ced8448d2
</resources>