<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"

    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WB"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="75dp"
        />



    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="39dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"

        android:textColor="@color/white"


        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Pass"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FP"
        android:textSize="14sp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="229dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginTop="89dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/BoColor"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="173dp"
        android:layout_marginStart="130dp"
        android:text="@string/DHA"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CP"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="140dp"
        android:textSize="16sp"

        />




</LinearLayout>