<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".Register">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Profile_intro"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Name"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="30dp"
        android:autofillHints="@string/Name"
        />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"

        android:textColorHint="@color/white"/>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/BoBgColor"
        android:text="@string/Create_Profile"
        app:backgroundTint="@color/BoBgColor" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/having_acc"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@xml/edit_text_border"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:background="@xml/edit_text_border"
        />

</androidx.appcompat.widget.LinearLayoutCompat>