<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".listToDo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/bgColor"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            app:backgroundTint="@color/bgColor" />
        <TextView
            android:id="@+id/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LTD"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="80dp"


            />

    </LinearLayout>

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/search"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        tools:ignore="MissingConstraints"
        android:background="@drawable/shape"
        android:inputType="text" />

    <TextView
        android:id="@+id/ListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/List"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/CNL"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/CNLH"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_add_24"
        tools:ignore="MissingConstraints"
        android:background="@drawable/shape"
        android:inputType="text"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_to_do_item"/>
</LinearLayout>