<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/backtoPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/bgColor"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            app:backgroundTint="@color/bgColor" />
        <TextView
            android:id="@+id/TaskHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LTD"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="80dp"

            />


    </LinearLayout>
    <EditText
        android:id="@+id/searchP"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/search"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        tools:ignore="MissingConstraints"
        android:background="@drawable/shape"
        android:inputType="text" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="40sp"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

</LinearLayout>